CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(tpp)

FIND_PACKAGE(SDL REQUIRED)

SET(RGS_RELEASE_DIR ${tpp_SOURCE_DIR}/../../release/${CMAKE_SYSTEM_NAME})
SET(CMAKE_INSTALL_PREFIX ${RGS_RELEASE_DIR})

IF( NOT SDL_FOUND )
   MESSAGE( FATAL_ERROR "SDL not found!" )
ENDIF(NOT SDL_FOUND )


INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR} "${tpp_SOURCE_DIR}/../../release/${CMAKE_SYSTEM_NAME}/include")

SET(tpp_SRCS
	main.c
	SDLMain.m
)

ADD_EXECUTABLE(tpp ${tpp_SRCS})

TARGET_LINK_LIBRARIES (tpp
	${SDL_LIBRARY}
	${tpp_SOURCE_DIR}/../../release/${CMAKE_SYSTEM_NAME}/lib/librgs.a
)

INSTALL(DIRECTORY ${tpp_SOURCE_DIR}/data DESTINATION samples/tpp)
INSTALL(TARGETS tpp DESTINATION samples/tpp)
